# notion-board-sync

./: .env.example  .gitignore  README.md  pyproject.toml
notion_board_sync/: client.py  config.py  db.py  main.py  models.py  notifications.py  notion_client.py  parser.py  populate_db.py  slack_client.py  sync.py  ticket_parser.py  types.py
